# panda-lib

./: .gitignore  .hgignore  CMakeLists.txt  CPP-panda-lib.pro  Changes  FetchDeps.cmake  INSTALL.SKIP  MANIFEST  MANIFEST.SKIP  Makefile.PL  README.md  lib.xs
clib/: CMakeLists.txt  README.md  panda-lib-config.cmake
clib/doc/: error.md  log.md
clib/doc/log/: formatter.md  modules.md
clib/doc/reference/: ErrorCode.md  excepted.md  exception.md  expected.md  memory.md
clib/src/panda/: basic_string.h  excepted.h  exception.cc  exception.h  refcnt.h
clib/src/panda/log/: PatternFormatter.h  PatternFormatter.icc  log.cc  log.h
clib/src/panda/unix/: exception.cc
clib/tests/: bench.cc  test.cc  test.h  varint.cc
clib/tests/log/: formatter.cc  logger.cc  module.cc  multi.cc
lib/Alien/: libpanda.pm
lib/CPP/panda/: lib.pm  lib.pod
lib/XS/: libpanda.pm
libpanda/: CMakeLists.txt
libpanda/src/panda/: endian.h  endian_config.h.in
perl/: Changes
perl/lib/XS/: libpanda.pm
src/panda/: CallbackDispatcher.h  backtrace.cc  backtrace.h  basic_string.h  basic_string_view.h  cast.h  error.cc  error.h  excepted.h  exception.cc  exception.h  expected.h  function.h  function_utils.h  log.cc  log.h  optional.h  pp.h  refcnt.cc  refcnt.h  string_map.h  string_set.h  string_view.h  traits.h  unordered_string_map.h  unordered_string_set.h  varint.h
src/panda/exception/: unix.icc  unix_impl.cc  unix_impl.h  win.icc  windows_impl.cc
src/panda/lib/: endian.h  integer_sequence.h  intrusive_chain.h  memory.cc  memory.h  owning_list.h  traits.h
src/panda/log/: PatternFormatter.h  PatternFormatter.icc  console.h  console.icc  log.cc  log.h  multi.h  multi.icc
src/panda/win/: exception.cc
t/: MyTest.pm  MyTest.xs  backtrace.cc  backtrace.t  bench.cc  cpp_tests.t  dispatcher.cc  dispatcher.t  endian.cc  error.cc  excepted.cc  exception.cc  exception.t  from_chars.cc  from_chars.t  function.cc  function.t  intrusive_chain.cc  iptr.cc  iptr.t  log.cc  owning_list.cc  owning_list.t  string.cc  string_char.cc  string_char.t  string_char16.cc  string_char16.t  string_char32.cc  string_char32.t  string_containers.cc  string_containers.t  string_test.h  string_wchar.cc  string_wchar.t  test.h  to_chars.cc  to_chars.t  traits.cc  traits.t  (+2 more)
t/lib/: PLTest.pm
t/log/: formatter.cc  log.cc  logger.cc  logtest.h  module.cc  multi.cc
t/src/: test.h  test.xsi  test_dispatcher.cc  test_function.cc  test_owning_list.cc  test_utils.h
tests/: function.cc
tests/log/: formatter.cc
